Fix z-index of main nav flyout interfering with Navbar list

--- a/src/assets/scss/custom/header.scss
+++ b/src/assets/scss/custom/header.scss
@@ -86,3 +86,12 @@ header {
         }
     }
 }
+
+// Fix Flyout Z-Index
+.c-flyout {
+    z-index: 900;
+
+    * {
+      z-index: 901;
+    }
+}
